Fix the issue in the first task

--- a/ViT_Implementation_Practice.ipynb
+++ b/ViT_Implementation_Practice.ipynb
@@ -56,14 +56,16 @@
     "        super().__init__()\n",
     "        image_height, image_width = image_size\n",
     "        num_patches = (image_height // patch_size) * (image_width // patch_size)\n",
-    "        patch_dim = in_dim * patch_size * patch_size\n",
+    "        self.to_patch_embedding = nn.Sequential(\n",
+    "            Rearrange('#! >>> fill the correct einops statement here for prepare patches', p1=patch_size, p2=patch_size),\n",
+    "            #! >>> fill the embedding layer declaration here (hint: transform from `patch_size * patch_size * in_dim` to `dim`\n",
+    "        )\n",
     "        self.pos_embedding = #! >>> fill the modules declaration here\n",
     "        self.cls_token = #! >>> fill the modules declaration here\n",
     "        self.dropout = nn.Dropout(emb_dropout)\n",
     "\n",
     "    def forward(self, img):\n",
     "        x = self.to_patch_embedding(img)\n",
-    "        b, n, _ = x.shape\n",
     "\n",
     "        #! >>> fill the neccessary codes here\n",
     "        # Steps:\n",
